--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ CANA meetings cover a diverse set of topics all pertaining to conducting researc
 <p>
 CANA also conducts workshops on technology and techniques for conducting analysis.  Recent workshops include basic R, STATNET for network analysis, ERGM and SIENA.
 </p>
+
+<p><em>Suscribe to our mail list <a target="_blank" href="https://mymaillists.usc.edu/sympa/info/cana-l">here</a></em></p>
   
   <!---<h1 class="page-heading">Posts</h1>
 
