Including the mail-list link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ CANA meetings cover a diverse set of topics all pertaining to conducting researc
 CANA also conducts workshops on technology and techniques for conducting analysis.  Recent workshops include basic R, STATNET for network analysis, ERGM and SIENA.
 </p>
 
-<p><em>Suscribe to our mail list <a target="_blank" href="https://mymaillists.usc.edu/sympa/info/cana-l">here</a></em></p>
+<p><em>Subscribe to our mail list <a target="_blank" href="https://mymaillists.usc.edu/sympa/info/cana-l">here</a></em></p>
   
   <!---<h1 class="page-heading">Posts</h1>
 
